fix overflow in password_reset.html for very small devices, change button style

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -323,6 +323,10 @@ input[name='q']::placeholder {
     padding: 5px;
 }
 
+.card-body-pw {
+    width: 100vw;
+}
+
 /*  Media Queries */
 
 /* login, logout, register */
@@ -339,11 +343,15 @@ input[name='q']::placeholder {
     }
   }
 
-  @media (max-width: 300px) {
-    .auth-container {
-        max-width: 100px;
-    }
-  }
+@media (max-width: 300px) {
+    .card-body {
+        width: 100vw;
+}
+
+    #id_email {
+        max-width: 90%;
+}
+}
 
 /* Order Details */
 
